2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php, include/javascript/jquery.pandora.js,
	include/functions_db.php: cleaned source code style.
	
	* include/functions_users.php, index.php, operation/menu.php,
	operation/users/webchat.php, include/javascript/webchat.js,
	general/header.php: added first version of webchat.
	
	* include/functions.php: into the function "check_login" added the
	parameter $output for some cases don't want see the error page like
	as the ajax querys.

2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/search_reports.php,
	godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/reporting_builder.item_editor.php: Fixed some issues
	with reportin usability related to new menu structure.

2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>

	*extensions/snmp_explorer.php,
	operation/agentes/estado_monitores.php,
	operation/agentes/ver_agente.php,
	operation/search_agents.php,
	operation/snmpconsole/snmp_view.php,
	operation/gis_maps/render_view.php,
	godmode/agentes/fields_manager.php,
	godmode/agentes/configure_field.php,
	godmode/agentes/planned_downtime.php: Fixed a problem with agent sec
	param changed from gagente to estado in order to display new menus properly

2012-04-21  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_agents.php, include/functions_config.php,
	include/db/postgresql.php, operation/agentes/estado_agente.php,
	operation/agentes/status_monitor.php, extensions/module_groups.php:
	Merged from trunk. Fixed SQL error with PostgreSQL.

2012-04-21  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_network_map.php: Merged from trunk. Updated
	description to follow usability improvement of network map.

2012-04-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php: Setted last_reference database
	field to actual utimestamp when create an alert to avoid
	unecessary charge on server 
